--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 33
     buildToolsVersion "29.0.2"
     defaultConfig {
-        applicationId "com.sedulous.attendancphospital"
+        applicationId "com.sedulous.attendancehonda3"
         minSdkVersion 23
         targetSdkVersion 33
         versionCode 1
