--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sedulous.attendancphospital">
+    package="attendancehonda">
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -19,10 +19,10 @@
         android:icon="@drawable/logo_ph"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:roundIcon="@drawable/logo_gsisi"
+        android:roundIcon="@drawable/logo_ph"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name="com.sedulous.attendancphospital.SplashActivity"
+        <activity android:name="com.sedulous.attendancehonda3.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,7 +34,7 @@
             android:name="com.mantra.mfs100"
             android:required="false" />
 
-        <activity android:name="com.sedulous.attendancphospital.MainActivity"
+        <activity android:name="com.sedulous.attendancehonda3.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
